Revision history for JSON-Schema-Modern

{{$NEXT}}

0.545     2022-02-22 04:30:36Z
          - avoid new experimental warning on 5.35.9
          - skip unresolvable identifiers for future drafts in acceptance
            tests (added in TJSA 1.016)

0.544     2022-02-16 05:53:08Z
          - add_schema() now has more consistent exception handling

0.543     2022-02-11 04:11:55Z
          - now allowing runtime overriding of the "strict" configuration
          - add "effective_base_uri", for adjusting the locations of errors
            and annotations against a dynamic base

0.542     2022-01-23 08:17:08Z
          - new "strict" option (and --strict flag to json-schema-eval), for
            disallowing unknown keywords

0.541     2022-01-17 23:57:35Z
          - add --add-schema option to json-schema-eval to allow for the
            reference of additional schemas during evaluation

0.540     2022-01-17 18:58:36Z
          - make "unimplemented format" errors more visible
          - fixed serializing of results in acceptance tests
          - add --validate-schema option to json-schema-eval to provide an
            easy way to validate a schema against its meta-schema

0.539     2022-01-06 04:07:20Z
          - updated error message for the "type" keyword to include the actual
            type, as well as the expected type(s)

0.538     2021-12-31 21:18:21Z
          - remove no-longer-needed TODO in tests that caused warnings in
            small-int systems

0.537     2021-12-30 22:49:02Z
          - fix number/integer differentiation on small-int systems
          - improve division calculations if either argument is a non-integer

0.536     2021-12-30 05:32:44Z
          - very large/small numbers are now properly accomodated in all
            cases, including from JSON-serialized data

0.535     2021-12-28 06:38:37Z
          - mark more tests TODO (temporarily!) for small-int systems

0.534     2021-12-27 21:05:34Z